@@ -1,26 +1,26 @@
 <table class="blocks bord" id="blkstab">
 <tr>
 	<th colspan="3">Block info
-	<th colspan="3">Block size
+	<th colspan="4">Block size
 	<th colspan="4">Mining info
 	<th>
-	<th colspan="5">Block fetching stats
+	<th colspan="4">Block fetching stats
 <tr>
 	<th width="52">Height
 	<th width="62" id="ts_rcvd_lab" onclick="swap_time_mode()" style="cursor:pointer">Received
 	<th>Hash
 	<th width="30" align="right">TXs
+	<th width="10" title="Missing TXs in cmpctblk">M
 	<th width="20" align="right">SiOps
 	<th width="35" align="right">kByte
 	<th width="30">BTC
 	<th width="30">SPB
 	<th width="20">Ver
 	<th align="left">Miner
-	<th width="10" title="Missing TXs in cmpctblk">M
-	<th width="20" title="Pre-processing time ms" align="right">Pre
+	<th width="20" title="Pre-processing time ms" align="right">Sta
 	<th width="20" title="Download time ms" align="right">D/L
 	<th width="20" title="Queueing time ms" align="right">Que
-	<th width="20" title="Verification time ms" align="right">Ver
+	<th width="20" title="Total blcok committ time ms" align="right">Don
 	<th width="10" title="Extra times received">X
 </tr>
 </table>
@@ -109,6 +109,11 @@ function refreshblocks() {
 
 				td = row.insertCell(-1)
 				td.style.textAlign = 'right'
+				td.className = 'blstat'
+				if (cs[i].MissedCnt>0)  td.innerText = cs[i].MissedCnt
+
+				td = row.insertCell(-1)
+				td.style.textAlign = 'right'
 				td.className = 'blsigops'
 				if (cs[i].Sigops>0)  td.innerText = cs[i].Sigops
 
@@ -138,11 +143,6 @@ function refreshblocks() {
 				td = row.insertCell(-1)
 				td.className = "i"
 				td.innerText = miner
-
-				td = row.insertCell(-1)
-				td.style.textAlign = 'right'
-				td.className = 'blstat'
-				if (cs[i].MissedCnt>0)  td.innerText = cs[i].MissedCnt
 
 				td = row.insertCell(-1)
 				td.style.textAlign = 'right'
